Have added history windows You can select color on text Numbers and chars get on same place Only one settings window are created now Have added extra keys and numpad so it is displayed.